# katsuo-bridge

./: README.md  pyproject.toml
docs/: protocol.md
katsuo/bridge/: __init__.py  csr.py  sim.py
katsuo/bridge/_monkeypatch/: __init__.py  amaranth_soc_csr_bus.py  amaranth_soc_memory.py
katsuo/bridge/cli/: __init__.py  csr.py  options.py
katsuo/bridge/client/: bridge.py  csr.py
katsuo/bridge/client/transport/: __init__.py  jtag.py  serial.py  usb.py
tests/: test_csr_bridge.py
