[project]
name = "katsuo-bridge"
description = "Bus bridge for Amaranth"
readme = "README.md"
authors = [
    {name = "Vegard Storheil Eriksen", email = "zyp@jvnv.net"},
]
license = {text = "MIT"}
dependencies = [
    "katsuo-stream",
    "amaranth >= 0.5",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc.git@5c43cf58f15d9cd9c69ff83c97997708d386b2dc",
    "click>=8.1.8"
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
ftdi = [
    "pyftdi >= 0.56.0",
]
serial = [
    # TODO
]
usb = [
    "nusb",
]
all = [
    "katsuo-bridge[ftdi,serial,usb]",
]

[project.scripts]
katsuo-bridge = "katsuo.bridge.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest tests/"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
